[package]
name = "range-mutex"
version = "0.1.1"
edition = "2021"
authors = ["Zachary S"]
description = "A `Mutex<[T]>`-like type, that allows locking different ranges separately."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["mutex"]
repository = "https://github.com/zachs18/range-mutex"
