[package]
name = "range-mutex"
version = "0.1.3"
edition = "2021"
authors = ["Zachary S"]
description = "A `Mutex<[T]>`-like type, that allows locking different ranges separately."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["mutex"]
repository = "https://github.com/zachs18/range-mutex"

[dependencies]
parking_lot = "0.12.1"

[features]
default = ["async"]
async = []

[dev-dependencies]
itertools = "0.11.0"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["macros", "time", "rt", "test-util"] }
